--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "@ng-icons/core": "^27.3.0",
+    "@ng-icons/material-icons": "^27.3.0",
     "@ngneat/bind-query-params": "^6.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
