--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --verbose --disable-host-check --host 0.0.0.0 --serve-path /absproxy/4200",
+    "start-ipad": "ng serve --verbose --disable-host-check --host 0.0.0.0 --serve-path /absproxy/4200",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
